<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/pokemon_ability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/text_loading"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/hidden"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pokemon_ability"
        app:layout_constraintStart_toStartOf="@+id/pokemon_ability"
        app:layout_constraintTop_toTopOf="@+id/pokemon_ability" />

    <ImageView
        android:id="@+id/info_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/info_btn"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pokemon_ability"
        app:layout_constraintTop_toTopOf="@+id/pokemon_ability"
        app:srcCompat="@drawable/ic_info" />
</androidx.constraintlayout.widget.ConstraintLayout>