<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <com.skydoves.transformationlayout.TransformationLayout
        android:id="@+id/transformationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:transformation_duration="550">

        <LinearLayout
            android:id="@+id/pokemon_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_pokemon"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:id="@+id/pokemon_container_root"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/background_pokemon_container"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/pokemon_image_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_pokemon_evolution_profile"
                android:gravity="center"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/base_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/back_image"
                    android:src="@drawable/image"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/pokemon_image"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:contentDescription="@string/front_image" />
            </LinearLayout>


            <TextView
                android:id="@+id/pokemon_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:text="@string/text_loading"
                android:textAlignment="center"
                android:textColor="@color/colorSubText"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/pokemon_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pokemon_name" />

            <TextView
                android:id="@+id/pokemon_name"
                style="@style/MyCustomFontTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:text="@string/text_loading"
                android:textAlignment="center"
                android:textColor="@color/colorSubText"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/pokemon_image_container"
                app:layout_constraintStart_toEndOf="@+id/pokemon_number"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/pokemon_image_container"
                app:layout_constraintStart_toStartOf="@+id/pokemon_number"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_name">

                <TextView
                    android:id="@+id/type_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_label"
                    android:padding="5dp"
                    android:text="@string/text_loading"
                    android:textAlignment="center"
                    android:textColor="@color/colorSubText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/type_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_label"
                    android:padding="5dp"
                    android:text="@string/text_loading"
                    android:textAlignment="center"
                    android:textColor="@color/colorSubText"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </com.skydoves.transformationlayout.TransformationLayout>
</androidx.cardview.widget.CardView>

